fix: Adjust hero-text internal spacing

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,13 @@ li a {
     align-items: center;
 }
 
+.hero-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 8px;
+}
+
 .hero-main-text {
     color: #F9FAF8;
     font-size: 48px;
